devops/kubernetes/platform-core/overlays/aws/provider-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-core
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
